[package]
name = "libchai-ziyuan"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = "4.5.42"
indexmap = "2.10.0"
itertools = "0.14.0"
libchai = { version = "0.3.0", path = "../libchai" }
rand = "0.9.2"
rustc-hash = "2.1.1"
serde = "1.0.219"
serde_yaml = "0.9.34"

[profile.benchmark]
inherits = "dev"
opt-level = 3
